# BOSSv3

./: .gitignore  EPIC.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: app_authoring.md  architecture.md  configuration.md  deployment.md  event_bus.md  hardware.md  testing.md  ui.md
.github/prompts/: apps-update.md  improvements.prompt.md  new-apps.md  plan-bossV3NiceguiRewrite.prompt.md  todo.md
deploy/: PI_SETUP.md  WINDOWS_DEV_SETUP.md  boss-kiosk.service  boss.service  deploy.sh
docs/: RPi-GPIO-Pin-Diagram.md
scripts/: validate_manifests.py
secrets/: secrets.sample.env
src/boss/: __init__.py  main.py
src/boss/apps/: __init__.py
src/boss/config/: __init__.py  app_mappings.json  app_runtime_config.py  boss_config.json  config_manager.py  secrets_manager.py
src/boss/core/: __init__.py  app_api.py  app_launcher.py  app_manager.py  app_runner.py  event_bus.py  events.py  hardware_event_bridge.py  system_manager.py
src/boss/hardware/: __init__.py  factory.py
src/boss/log_config/: __init__.py  logger.py
src/boss/logging/: __init__.py  logger.py
src/boss/ui/: __init__.py  admin_page.py  dev_panel.py  layout.py  screen.py
tests/: __init__.py  conftest.py
tests/helpers/: app_scaffold.py  runtime.py
tests/integration/: test_go_button_flow.py
tests/unit/: __init__.py  test_admin_page.py  test_validate_manifests.py
tests/unit/apps/: test_admin_boss_admin.py  test_admin_wifi.py  test_app_smoke.py  test_error_utils.py  test_http_helpers.py  test_manifest_scan.py  test_paginator.py
(+154 files in other folders)
